forward to home, added more projects

--- a/home.html
+++ b/home.html
@@ -37,7 +37,30 @@
 </td></tr>
 
 <tr><th><b>
+<a href="https://www.github.com/agge3/breakout" class="permalink">
+    breakout</a></b><br>
+<i class="year">2024</i></th><td>
+    An SFML clone of the retro game, Breakout. Followed tutorial
+    <a href="https://www.youtube.com/watch?v=TC9zhufV_Z8">
+    CppCon2014: Vittorio Romeo "Quick Game Development with C++11/C++14</a>.
+    Nice looking little game, I enjoyed making it and have learned a lot since
+    then! Great tutorial if you're interested! I'd like to expand on it with
+    pretty graphics and more robust features.
+</td></tr>
+
+<tr><th><b>
+<a href="https://www.github.com/agge3/lockscreen" class="permalink">
+    lockscreen</a></b><br>
+<i class="year">2024</i></th><td>
+    <b>Work in progress.</b> A simple lock screen for Wayland that listens for
+    the D-Bus "Lock" message from org.freedesktop.login1, using the libdbus
+    low-level C API. <i>lockscreen</i> then uses the Wayland protocol to
+    interact with the Wayland display and lock the session.
+</td></tr>
+
 </b></th></tr>
+
+<!-- This webpage! All handcoded in plain html using vi. :) -->
 
 </body>
 </table>
