--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<!doctype html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=https://agge3.github.io/home.html">
+</head>
+<body>
+</body>
