--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://agge3.github.io/home.html">
+    <meta http-equiv="refresh" content="0;
+        url=https://agge3.github.io/agge-projects.html">
 </head>
 <body>
 </body>
