--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;
-        url=https://agge3.github.io/agge-projects.html">
+    <meta http-equiv="refresh" content="0; url=https://agge3.github.io/home.html">
 </head>
 <body>
 </body>
